Added some new info

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,10 @@
         <title>Hello</title>
     </head>
     <body>
-        <h1>Hello static html</h1>
+        <form action="/post/fileData.html" enctype="multipart/form-data" method="post">
+            <textarea name="ids" rows="40" cols="80"></textarea>
+            <br>
+            <input type="submit" value="Send">
+        </form>
     </body>
 </html>
