Made everything working at last

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,7 +3,7 @@
         <title>Hello</title>
     </head>
     <body>
-        <form action="/post/fileData" enctype="multipart/form-data" method="post">
+        <form action="/post/fileData" method="post">
             <textarea name="ids" rows="40" cols="80"></textarea>
             <br>
             <input type="submit" value="Send">
