Added textarea as result output

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,7 @@
             <textarea name="ids" rows="40" cols="80"></textarea>
             <br>
             <input type="submit" value="Send">
-        </form>
+        </form><br>
+        <a href="/working.html">Check existing</a>
     </body>
 </html>
